crates/app/src/tui/snapshots/neurohelmet__tui__tests__dice_cluster.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 746
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                    ╔ Dice reference ══════════════════════════════════════════╗                   │
                    ║ Cluster    Full Table    Hit Location                    ║                   │
                    ║                                                          ║                   │
                    ║LRM 20  (rack 20)                                         ║───────────────────┘
┌LA────────┐┌LT─────║  2d6    hits                                             ║───────────────────┐
│A 20/20   ││A 20/20║    2      6                                              ║ing 5+   BV 1897   │
│██████████││███████║    3      6                                              ║                   │
│I 10/10   ││R 6/6  ║    4      9                                              ║───────────────────┘
│██████████││███████║    5     12                                              ║───────────────────┐
│          ││I 10/10║    6     12                                              ║p 0                │
│          ││███████║    7     12                                              ║                   │
│          ││       ║    8     12                                              ║                   │
│          ││       ║    9     16                                              ║───────────────────┘
│          ││       ║   10     16                                              ║QUIP ──────────────┐
│          ││       ║   11     20                                              ║  H6    1/msl      │
└──────────┘└───────║   12     20                                              ║/6                 │
            ┌LL─────║                                                          ║                   │
            │A 20/20║[Tab] switch page   [Esc] close                           ║                   │
            │███████╚══════════════════════════════════════════════════════════╝                   │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │──────────────────────────────────────│
            │          │            │          │            │ LRM 20   range 7/14/21   ammo LT 6/6 │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:fire  u:unfire  c:crit  p:pilot  Tab:panel  ?:help
