crates/app/src/tui/snapshots/neurohelmet__tui__tests__dice_hit_location.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 749
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                    ╔ Dice reference ══════════════════════════════════════════╗                   │
                    ║ Cluster    Full Table    Hit Location                    ║                   │
                    ║                                                          ║                   │
                    ║  2d6   Front  Left  Right  Rear                          ║───────────────────┘
┌LA────────┐┌LT─────║    2   CT *  LT *  RT *  CT *                            ║───────────────────┐
│A 20/20   ││A 20/20║    3   RA    LL    RL    RA                              ║ing 5+   BV 1897   │
│██████████││███████║    4   RA    LA    RA    RA                              ║                   │
│I 10/10   ││R 6/6  ║    5   RL    LA    RA    RL                              ║───────────────────┘
│██████████││███████║    6   RT    LL    RL    RT                              ║───────────────────┐
│          ││I 10/10║    7   CT    LT    RT    CT                              ║p 0                │
│          ││███████║    8   LT    CT    CT    LT                              ║                   │
│          ││       ║    9   LL    RT    LT    LL                              ║                   │
│          ││       ║   10   LA    RA    LA    LA                              ║───────────────────┘
│          ││       ║   11   LA    RL    LL    LA                              ║QUIP ──────────────┐
│          ││       ║   12   HD    HD    HD    HD                              ║  H6    1/msl      │
└──────────┘└───────║* natural 2: inflict a critical hit too                   ║/6                 │
            ┌LL─────║                                                          ║                   │
            │A 20/20║[Tab] switch page   [Esc] close                           ║                   │
            │███████╚══════════════════════════════════════════════════════════╝                   │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │──────────────────────────────────────│
            │          │            │          │            │ LRM 20   range 7/14/21   ammo LT 6/6 │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:fire  u:unfire  c:crit  p:pilot  Tab:panel  ?:help
