crates/app/src/tui/snapshots/neurohelmet__tui__tests__dice_single_weapon.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 772
expression: render(&mut app)
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐╔CT ▸F═════╗┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   │║A 20/20   ║│A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││███████╔ Dice reference ══════════════════════════════════════════╗                   │
│I 10/10   ││R 6/6  ║ Cluster    Full Table    Hit Location                    ║───────────────────┘
│██████████││███████║                                                          ║───────────────────┐
│          ││I 10/10║Medium Laser                                              ║p 0                │
│          ││███████║Single hit — no cluster roll.                             ║                   │
│          ││       ║                                                          ║                   │
│          ││       ║[Tab] switch page   [Esc] close                           ║───────────────────┘
│          ││       ╚══════════════════════════════════════════════════════════╝QUIP ──────────────┐
│          ││          │║          ║│          ││          ││ Medium Laser    RA  H3    5          │
└──────────┘└──────────┘╚══════════╝└──────────┘└──────────┘│ AC/20 Ammo       10/10               │
            ┌LL────────┐            ┌RL────────┐            │                                      │
            │A 20/20   │            │A 20/20   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
