crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_acs_initial_renders_three_panes.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
┌ FORMATIONS · Round 0 · PV 12 ┐╔ Regiment ══════════════════╗┌ Combat Unit 1 ─────────────────────┐
│▶ Regiment                    │║▶ Combat Unit 1             ║│BM SZ4 MV3 TMM1                     │
│    MV3 TAC7 SK4  Normal      │║    A ██████████ 12/12      ║│Skill 4  Mor 7  PV 12               │
│                              │║    thr 9/6/3  D3/3/2       ║│Dmg  S3 M3 L2                       │
│                              │║    Rested  0.0FP  Normal   ║│                                    │
│                              │║                            ║│To-Hit 5+  (Medium vs TMM0)         │
│                              │║                            ║│Damage 3  ([/] range · +/- TMM · s 2│
│                              │║                            ║│                                    │
│                              │║                            ║│Morale Normal  check 6+ (2d6)       │
│                              │║                            ║│                                    │
│                              │║                            ║│Combat Teams                        │
│                              │║                            ║│  Team 1 — 6 elements               │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
│                              │║                            ║│                                    │
└──────────────────────────────┘╚════════════════════════════╝└────────────────────────────────────┘
 Spc:dmg  u:rep  m/M:CU/form morale  f/F:fatigue  n:round  e:done  a:add  g:group  [/]:range  +/-:tm
