crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_active_bin_marker.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 1978
expression: screen
---
  1:Atlas
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐╔CT ▸F═════╗┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   │║A 20/20   ║│A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████│║██████████║│██████████││██████████││ ░░░░░░   unhurt                      │
│I 10/10   ││R 6/6     │║R 6/6     ║│R 6/6     ││I 10/10   │└──────────────────────────────────────┘
│██████████││███████╔ Right Torso — critical slots ════════════════════════════╗───────────────────┐
│          ││I 10/10║▶ 1  AC/20 Ammo  5/5  ◀ active                            ║p 0                │
│          ││███████║[Spc] hit  [a] active bin  [t] munition  [Esc] close      ║                   │
│          ││       ╚══════════════════════════════════════════════════════════╝                   │
│          ││          │║          ║│          ││          │└──────────────────────────────────────┘
│          ││          │║          ║│          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          │║          ║│          ││          ││ Medium Laser    RA  H3    5          │
└──────────┘└──────────┘╚══════════╝└──────────┘└──────────┘│ AC/20           RT  H7    20         │
            ┌LL────────┐            ┌RL────────┐            │ AC/20 Ammo       5/5                 │
            │A 20/20   │            │A 20/20   │            │ AC/20 Ammo       5/5                 │
            │██████████│            │██████████│            │                                      │
            │I 10/10   │            │I 10/10   │            │                                      │
            │██████████│            │██████████│            │                                      │
            │          │            │          │            │                                      │
            │          │            │          │            │                                      │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Active bin: RT AC/20 Ammo | Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
