crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_aero_graded_engine_crit.snap
---
source: crates/app/src/tui/mod.rs
expression: render(&mut app)
---
  1:Visigoth
                        ╔NOS═══════╗                        ┌ HEAT ────────────────────────────────┐
                        ║A 12/12   ║                        │Heat 0 / 30   diss 10   eng +4        │
                        ║██████████║                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        ║          ║                        │sinks 10× Single                      │
                        ║          ║                        │no penalties                          │
                        ║          ║                        │                                      │
                        ║          ║                        │                                      │
                        ╚══════════╝                        └──────────────────────────────────────┘
            ┌LWG───────┐┌SI────────┐┌RWG───────┐            ┌ PILOT ───────────────────────────────┐
            │A 9/9  ╔ Aerospace criticals ═════════════════════════════════════╗ing 5+             │
            │███████║  Avionics                                                ║                   │
            │       ║▶ Engine  ×2  −4 thrust, +4 heat                          ║───────────────────┘
            │       ║  FCS                                                     ║───────────────────┐
            │       ║  Landing Gear                                            ║ 2  engine         │
            │       ║  Sensors                                                 ║                   │
            │       ║  — Weapons —                                             ║                   │
            │       ║  NOS: ER Large Laser                                     ║───────────────────┘
            │       ║[↑↓] select   [Spc] mark/clear   [Esc] close              ║QUIP ──────────────┐
            │       ╚══════════════════════════════════════════════════════════╝S  H12   10        │
            └──────────┘└──────────┘└──────────┘            │                                      │
                        ┌AFT───────┐                        │                                      │
                        │A 7/7     │                        │                                      │
                        │██████████│                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
 Engine 2 hits | Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
