crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_aero_weapon_crit_popup.snap
---
source: crates/app/src/tui/mod.rs
expression: render(&mut app)
---
  1:Visigoth
                        ╔NOS═══════╗                        ┌ HEAT ────────────────────────────────┐
                        ║A 12/12   ║                        │Heat 0 / 30   diss 10                 │
                        ║██████████║                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        ║          ║                        │sinks 10× Single                      │
                        ║          ║                        │no penalties                          │
                        ║          ║                        │                                      │
                        ║          ║                        │                                      │
                        ╚══════════╝                        └──────────────────────────────────────┘
            ┌LWG───────┐┌SI────────┐┌RWG───────┐            ┌ PILOT ───────────────────────────────┐
            │A 9/9  ╔ Aerospace criticals ═════════════════════════════════════╗ing 5+             │
            │███████║  Avionics                                                ║                   │
            │       ║  Engine                                                  ║───────────────────┘
            │       ║  FCS                                                     ║───────────────────┐
            │       ║  Landing Gear                                            ║ 8                 │
            │       ║  Sensors                                                 ║                   │
            │       ║  — Weapons —                                             ║                   │
            │       ║▶ NOS: ER Large Laser  ×                                  ║───────────────────┘
            │       ║[↑↓] select   [Spc] mark/clear   [Esc] close              ║QUIP ──────────────┐
            │       ╚══════════════════════════════════════════════════════════╝S  H12   10        │
            └──────────┘└──────────┘└──────────┘            │                                      │
                        ┌AFT───────┐                        │                                      │
                        │A 7/7     │                        │                                      │
                        │██████████│                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
 NOS: ER Large Laser destroyed | Spc:dmg  u:rep  c:crit  p:pilot  f:face  Tab:panel  ?:help
